syntax = "proto3";

option csharp_namespace = "Larp.Protos.Mystwood5e";

package larp.mw5e;

enum OccupationType {
    OCCUPATION_TYPE_BASIC = 0;
    OCCUPATION_TYPE_YOUTH = 1;
    OCCUPATION_TYPE_ADVANCED = 2;
    OCCUPATION_TYPE_PLOT = 3;
    OCCUPATION_TYPE_ENHANCEMENT = 4;
}

// Indicates a single skill or a choice of skills
message SkillChoice {
    int32 count = 1;
    repeated string choices = 2;
}

message Occupation {
    string name = 1;
    repeated string specialties = 2;
    string type = 3;
    repeated string skills = 4;
    repeated SkillChoice choices = 5;
    optional string duty = 6;
    optional string livery = 7;
}
